...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">
        <ImageButton
            android:id="@+id/event_details_return"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back_button_24dp"
            android:background="@color/white"/>
        <View
            android:layout_width="0dp"
...
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Date"/>
                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"/>
            </LinearLayout>
            <View
...
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Registration Deadline"/>
                <TextView
                    android:id="@+id/deadline_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"/>
            </LinearLayout>
            <View
...
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Location"/>
                <TextView
                    android:id="@+id/location_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"/>
            </LinearLayout>
            <View
...
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Entrants on \nWaiting List"/>
                <TextView
                    android:id="@+id/entrants_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"/>
            </LinearLayout>
            <View
...
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Description"/>
                <TextView
                    android:id="@+id/desc_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_text"/>
            </LinearLayout>
            <View
...
        android:paddingBottom="10dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <Button
            android:id="@+id/see_waitList"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="See Waitlist"
            android:backgroundTint="@color/black"/>
...
