<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/white"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:id="@+id/search_layout"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/info_button"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_info_black_24dp"
            android:background="@color/white"
            android:contentDescription="info"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:startIconDrawable="@drawable/ic_magnifyglass_black_24dp"
            android:hint="Search Events"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_bar"
                style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/QR_scan_button"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="QR Scan"
            android:background="@color/white"
            android:src="@drawable/ic_qr_black_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_layout"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_events_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_filter_black_24x20dp"
            app:iconTint="@color/black"

            android:textSize="11sp"
            android:text="Filter Events"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:focusable="true"
            app:strokeColor="@color/gray"
            app:strokeWidth="1dp"
            android:backgroundTint="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:checkable="true"
            android:id="@+id/waitlisted_events_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            app:icon="@drawable/ic_clock_black_24x20dp"
            app:iconTint="@color/black"
            android:focusable="true"
            app:strokeColor="@color/gray"
            app:strokeWidth="1dp"
            android:text="Waitlist Events"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/filter_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="80dp">
        <ListView
            android:paddingHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/events_list"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>