<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back_button_24dp"
                android:background="@color/white"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.9"/>
            <TextView
                android:id="@+id/eventList_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_text"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/material_dynamic_neutral80"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listView_showList"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">
    </ListView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:paddingVertical="10dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <Button
            android:id="@+id/interactButton"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"
            android:backgroundTint="@color/black"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>