...
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/event_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/sample_text"
            android:layout_weight="3"
            android:paddingRight="10dp"/>
...
            android:id="@+id/event_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_info_black_24dp" />

        <Button
            android:id="@+id/event_details_button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="140dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
...
